# spacemat

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: strut_heat_leak.py  vet_bom.py
scripts/: fetch_nasa_outgassing.py  fetch_nist_fits.py
src/spacemat/: __init__.py  cli.py  compare.py  criteria.py  db.py  export.py  outgassing.py  plotting.py  report.py  schema.py  screen.py  thermal.py  units.py
src/spacemat/data/: compounds.json  materials.json  metals.json  nist_fits.json  polymers.json
tests/: test_cli.py  test_compare_export.py  test_contraction.py  test_data_integrity.py  test_nist_fits.py  test_outgassing.py  test_spacemat.py  test_thermal.py
