[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spacemat"
version = "0.1.0"
description = "Programmatic access and screening engine for spaceflight materials data: NASA outgassing (ASTM E595), cryogenic property curves, and design allowables."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alexandros Marinopoulos", email = "alexandros.marino@gmail.com" }]
keywords = ["materials", "spaceflight", "outgassing", "cryogenic", "ASTM E595", "aerospace"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = []

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
dev = ["pytest>=7", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spacemat = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
